# parking_debora

./: README.md  pyproject.toml  reporte.csv  visitas.db
src/: Practicas FLET.code-workspace  database.py  main.py
src/assets/: estacionamiento entrada.prn  estacionamiento salida.prn
src/components/: Alert.py  AppBar.py  Button.py  Container.py  Entrys.py  TextField.py
src/helpers/: helpers.py
