[project]
name = "parking-ceci"
version = "1.0.0 beta"
description = "Sistema de control de entradas y salidas para estacionamiento Ceci"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Corporación Tectronic", email = "joel@tectronic.mx" }
]
dependencies = [
    "flet==0.27.5",
    "pillow",          # Para manejo de imágenes (QR)
    "qrcode",          # Para generar códigos QR
    "pandas",          # Para exportar reportes a CSV
    "pywin32",         # Para imprimir con impresoras USB en Windows
]

[tool.flet]
org = "tectronic.mx"  # Puedes cambiar esto a tu dominio o nombre inverso
product = "Parking CECI"
company = "Corporación Tectronic"
copyright = "Copyright (C) 2025 Corporación Tectronic"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.5",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.5"}